...
        </Text>
      </TouchableOpacity>

      {/* 2. EXPLORE (PACIENTES) TAB */}
      {isNotExernalUser && 
        <TouchableOpacity
          testID="explore-tab"
          onPress={() => handleNavigate('patients/patients-list')}
          style={styles.tabItem}>
          <Image
            source={require('@/assets/expo.icon/Assets/lista.svg')}
            style={styles.icon}
            tintColor={isPatientsSection ? colors.main : colors.textSecondary}
...
          </Text>
        </TouchableOpacity>
      }

      {/* 5. PROFILE TAB */}
      <TouchableOpacity
        testID="profile-tab"
        onPress={() => handleNavigate('profile')}
        style={styles.tabItem}>
        <Image
          source={require('@/assets/expo.icon/Assets/user.svg')}
          style={styles.icon}
          tintColor={activeRouteName === 'profile' ? colors.main : colors.textSecondary}
...
