...
          <View style = {styles.container}>
            <Image
              source={SearchIcon}
              contentFit="contain"
              style = {styles.lookingGlass}
            />
            <Text testID="no-search-result-message" style = {styles.text}>
                {general? t('admin-users.noResults'):t('patients-list.noResults')}
            </Text>
            <Text style = {[styles.text, {marginTop: 32}]}>
                {general? t('admin-users.noResultsQuestion'):t('patients-list.noResultsQuestion')}
            </Text>
            <Pressable style = {styles.newUserBtn}
                onPress = {handleRegisterNew}
                testID = 'no-result-search-users'>
                <Image
                  source={NewUserIcon}
                  contentFit="contain"
                  style = {styles.newUserIcon}
                />
                <Text style = {styles.textBtn}>
...
