...
      onChangeOption(index);
  };

  return (
    <ThemedView>
      <Pressable
        testID="dropdown-btn"
        style={({ pressed }) => [styles.heading, pressed && styles.pressedHeading]}
        onPress={() => setIsOpen((value) => !value)}>
        <ThemedText style = {styles.text}>{option}</ThemedText>
        <ThemedView type="backgroundElement" style={styles.button}>
          <View style={{ transform: [{ rotate: isOpen ? '-90deg' : '90deg' }] }}>
          <SymbolView
...
            tintColor={theme.text}
          />
          </View>
        </ThemedView>
      </Pressable>
      {isOpen && (
        <Animated.View testID="dropdown-options" entering={FadeIn.duration(200)}>
          <ThemedView type="backgroundElement" style={styles.content}>
            {children.map((opt: string, index: number) => (
                <Pressable key={opt}
                    style={({ pressed }) => [pressed && styles.pressedHeading]}
                    onPress={() => changeOption(opt, index)}>
                    <ThemedText
...
