appId: com.proyect1.ATIDental
---
- launchApp

- runFlow: common/login-admin.yaml

- tapOn:
    id: "explore-tab"

- tapOn:
    id: "users-search-bar"

- inputText: "......."
- hideKeyboard

- extendedWaitUntil:
      visible:
          id: "no-search-result-message"
      timeout: 5000

- tapOn:
      id: "no-result-search-users"
  
- extendedWaitUntil:
      visible:
          id: "register-patient-screen"
      timeout: 5000

- tapOn:
    id: "explore-tab"

- tapOn:
      id: "users-search-bar"
- eraseText
- hideKeyboard

- tapOn:
      id: "dropdown-btn"

- extendedWaitUntil:
    visible:
      id: "dropdown-options"
    timeout: 5000

- tapOn:
      id: "dropdown-btn"


- extendedWaitUntil:
      notVisible:
          id: "dropdown-options"
      timeout: 5000

- scrollUntilVisible:
    element:
      id: "btn-export-patients-pdf"
    direction: DOWN
    timeout: 10000
    speed: 40

- assertVisible:
    id: "btn-export-patients-pdf"

- scrollUntilVisible:
      element:
          id: "list-pages"
      direction: DOWN
      timeout: 10000
      speed: 40

- tapOn:
    id: "profile-tab"

- tapOn:
    id: "menu-btn"

- tapOn:
    id: "nav-item-patients"

- extendedWaitUntil:
      visible:
        id: "list-patients-screen"
      timeout: 5000

- scrollUntilVisible:
    element:
      id: "btn-export-patients-pdf"
    direction: DOWN
    timeout: 10000

- assertVisible:
    id: "btn-export-patients-pdf"

- tapOn:
    id: "menu-btn"

- tapOn:
    id: "nav-item-logout"
